--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,6 +2,10 @@
 version: v2
 managed:
   enabled: true
+  override:
+    - file_option: go_package_prefix
+      value: github.com/liverty-music/specification/gen/go
+
   # Don't modify any file option or field option for protovalidate. Without
   # this, generated Go will fail to compile.
   disable:
