--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -9,6 +9,10 @@ permissions:
   contents: 'read'
   pull-requests: 'write'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   review:
     runs-on: 'ubuntu-latest'
@@ -22,18 +26,22 @@ jobs:
         uses: 'google-github-actions/run-gemini-cli@main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PULL_REQUEST_TITLE: ${{ github.event.pull_request.title || github.event.issue.title }}
-          PULL_REQUEST_BODY: ${{ github.event.pull_request.body || github.event.issue.body }}
-          PULL_REQUEST_NUMBER: ${{ github.event.pull_request.number || github.event.issue.number }}
+          PULL_REQUEST_NUMBER: ${{ github.event.pull_request.number }}
+          PULL_REQUEST_TITLE: ${{ github.event.pull_request.title }}
+          PULL_REQUEST_BODY: ${{ github.event.pull_request.body }}
           REPOSITORY: ${{ github.repository }}
-          GITHUB_PR_NUMBER: ${{ github.event.pull_request.number || github.event.issue.number }}
         with:
           gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
+          gemini_model: 'gemini-2.5-flash-lite'
           prompt: '/gemini-review'
-          gemini_debug: true
-          workflow_name: 'gemini_review'
+          gemini_debug: false
+          workflow_name: 'gemini-review'
           settings: |-
             {
+              "model": {
+                "maxSessionTurns": 20,
+                "compressionThreshold": 0.4
+              },
               "mcpServers": {
                 "github": {
                   "command": "docker",
@@ -55,9 +63,10 @@ jobs:
               "tools": {
                 "core": [
                   "run_shell_command(cat)",
-                  "run_shell_command(ls)",
+                  "run_shell_command(echo)",
                   "run_shell_command(grep)",
-                  "run_shell_command(find)"
+                  "run_shell_command(head)",
+                  "run_shell_command(tail)"
                 ]
               }
             }
